--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ default: &default
 
 development:
   <<: *default
-  database: development
+  database: candidatexyz-app
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
