--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rails-boilerplate",
+  "name": "candidatexyz-app",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.1",
