--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "material-components-web": "^0.36.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
