--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/webpacker": "^3.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "j-toker": "^0.0.10-beta3",
+    "candidatexyz-common-js": "https://github.com/TheLocust3/candidatexyz-common-js.git",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "material-components-web": "^0.36.0",
