--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "candidatexyz-common-js": "https://github.com/TheLocust3/candidatexyz-common-js.git",
+    "chart.js": "^2.7.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "material-components-web": "^0.36.0",
@@ -13,6 +14,7 @@
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
