--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.1",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "candidatexyz-common-js": "https://github.com/TheLocust3/candidatexyz-common-js.git",
     "chart.js": "^2.7.2",
+    "core-js": "^2.5.7",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "material-components-web": "^0.36.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
