--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "candidatexyz-common-js": "https://github.com/TheLocust3/candidatexyz-common-js.git",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "material-components-web": "^0.36.0",
@@ -19,6 +22,7 @@
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
