--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.2",
+    "react-day-picker": "^7.1.10",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.12.13",
     "react-redux": "^5.0.6",
